force-app/main/default/objects/Opportunity/fields/Deal_Health__c.field-meta.xml
<CustomField>
    <fullName>Deal_Health__c</fullName>
    <defaultValue>Good</defaultValue>
    <label>Deal Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
                <default>true</default>
                <label>Good</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Stalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>