force-app/main/default/objects/Opportunity/fields/Next_Step_Owner__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Owner__c</fullName>
    <label>Next Step Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>