force-app/main/default/objects/Opportunity/fields/Sensitive_Data__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Data__c</fullName>
    <label>Sensitive Data</label>
    <type>Checkbox</type>
</CustomField>