force-app/main/default/objects/Opportunity/fields/Weighted_Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Expected_Revenue__c</fullName>
    <formula>IF(IsClosed, 0, ROUND(Amount * Probability, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>