force-app/main/default/objects/Opportunity/validationRules/Forecast_Category_Closed_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>Forecast_Category_Closed_Mismatch</fullName>
    <active>true</active>
    <description>Closed Won/Lost opportunities must carry the Closed forecast category, keeping forecast buckets accurate.</description>
    <errorConditionFormula>AND(IsClosed, NOT(ISPICKVAL(Forecast_Category__c, 'Closed')))</errorConditionFormula>
    <errorDisplayField>Forecast_Category__c</errorDisplayField>
    <errorMessage>A closed opportunity must use the Closed forecast category.</errorMessage>
</ValidationRule>